# ds4

./: .gitignore  MTP_IMPLEMENTATION.md  Makefile  README.md  SPIKE_B_PLAN_ASSESSMENT.md  SPIKE_B_STEERING.md  TEMP_A6_RANK_LOCAL_NORM_PROMPT.md  TEMP_CODE_CLEANUP_PROMPT.md  TEMP_CURRENT_REPORT.md  TEMP_HC_ALLREDUCE_PROMPT.md  TEMP_HC_ALLREDUCE_STEER.md  TEMP_PARITY_POLICY.md  TEMP_PATTERN_A_PROMOTION_PROMPT.md  TEMP_REPO_REVIEW.md  TEMP_SPIKE_B_C_CAPTURE.md  TEMP_STATUS_REPORT.md  TEMP_STATUS_REPORT_002.md  TEMP_STATUS_REPORT_003.md  TEMP_STATUS_REPORT_004.md  TEMP_STATUS_REPORT_005.md  TEMP_STATUS_REPORT_009.md  TEMP_STATUS_REPORT_013.md  TEMP_STATUS_REPORT_015.md  TEMP_STATUS_REPORT_017.md  TEMP_STATUS_REPORT_018.md  TEMP_STATUS_REPORT_023.md  TEMP_STATUS_REPORT_026.md  TEMP_STATUS_REPORT_031.md  TEMP_STATUS_REPORT_034.md  TEMP_STATUS_REPORT_035.md  TEMP_STATUS_REPORT_037.md  TEMP_STATUS_REPORT_038.md  TEMP_STATUS_REPORT_041.md  TEMP_STATUS_REPORT_042.md  TEMP_STATUS_REPORT_043.md  TEMP_STATUS_REPORT_044.md  TEMP_STATUS_REPORT_045.md  TEMP_STATUS_REPORT_046.md  TEMP_STATUS_REPORT_047.md  TEMP_STATUS_REPORT_049.md  (+114 more)
appliance/: entrypoint.cu  http_server.cu  main.cu  options.cu  options.h  request_scheduler.cu
deploy/v100/: ds4-v100-appliance.env.example  ds4-v100-appliance.k8s.yaml  ds4-v100-appliance.service  ds4-v100-build-localpool.pod.yaml
docs/architecture/: DS4-V100-LAYOUT.md  DS4-V100-TP-EP-BOTTLENECKS.md  DS4-V100-TP-EP-LAYER2-COMMUNICATION.md  DS4-V100-TP8-INVESTIGATION.md
docs/operations/: DS4-V100-APPLIANCE.md
docs/sprints/: EXPERIMENT-STATUS.md  SPRINT-001-DEFERRED.md  SPRINT-001-FOLLOWUPS.md  SPRINT-001-REPORT.md  SPRINT-001.md  SPRINT-002-FOLLOWUPS.md  SPRINT-002-REPORT.md  SPRINT-002-SEED.md  SPRINT-003-FOLLOWUPS.md  SPRINT-003-REPORT.md  SPRINT-004-DEFERRED.md  SPRINT-004-FOLLOWUPS.md  SPRINT-004-REPORT.md  SPRINT-004.md  SPRINT-005-DEFERRED.md  SPRINT-005-REPORT.md  SPRINT-005.md  SPRINT-006-DEFERRED.md  SPRINT-006-REPORT.md  SPRINT-006.md  (+781 more)
engine/: api.h  appliance_runtime.cu  attention_output.cu  attention_projection.cu  attention_read.cu  compressed_kv_step.cu  context.c  context.h  context_cuda.cu  decode_loop.cu  diagnostics_support.cu  ep_compose.cu  ep_dense.cu  ep_executor.cu  hc_current.cu  hc_final.cu  layer_decode.cu  layer_execute.c  layer_execute.h  layer_execute_attention.inc  layer_execute_core.inc  layer_execute_ffn.inc  layer_runner.cu  layer_state.c  layer_state.h  mtp.c  mtp.h  mtp_sidecar.c  mtp_sidecar.h  mtp_step.cu  mtp_step.h  output_head.cu  post_attention_ffn.cu  replay.c  replay.h  replay_core.inc  replay_step_pipeline.inc  router_plan.cu  router_step.cu  runtime_options.cuh  (+12 more)
gguf-tools/: Makefile  deepseek4-quantize.c
kernels/turbomind/ggml-turbomind/: CMakeLists.txt  api.cc  ggml-turbomind-deinterleave.cu  ggml-turbomind-deinterleave.h  ggml-turbomind-ds4-probe.cu  test_correctness.cpp  test_dlopen.cpp  test_grouped.cpp  test_grouped_compare.cpp  test_grouped_gate_up_fusion.cpp  test_multi_device.cpp  test_multi_device_simultaneous.cpp  test_p2p_reduce_proxy.cpp  test_tp4_resident_layer_slice.cu  test_tp_split_2gpu.cpp  test_tp_split_4gpu.cpp
kernels/turbomind/ggml-turbomind/include/: ggml-turbomind-api.h
smokes/: ds4-v100-context-smoke.c  ds4-v100-mtp-residency-smoke.c  ds4-v100-mtp-sidecar-gate.c  ds4-v100-residency-smoke.c  ds4-v100-tp-ep-dense-cache-smoke.cu  ds4-v100-tp-ep-int8-compressor-workbench.cu  ds4-v100-tp-ep-layer-smoke.cu  ds4-v100-tp8-collective-workbench.cu  mtp-attn-smoke.c  mtp-ffn-smoke.c  mtp-forward-smoke.c  mtp-logits-smoke.c  mtp-prefix-smoke.c  mtp-q4k-smoke.c  mtp-residency-smoke.c  mtp-verify-smoke.c  tp-runtime-smoke.cu  tp4-turbomind-layer-smoke.cu
tests/: bf16_probe_smoke.c  cuda_bf16_probe.c  cuda_f8_hmma_attn_batch_smoke.c  cuda_f8_hmma_pair_swiglu_smoke.c  cuda_f8_hmma_shared_down_smoke.c  cuda_hc_relay_smoke.c  cuda_source_dtypes_smoke.c  cuda_v100_bounded_logits_smoke.c  cuda_v100_compressor_bridge_smoke.c  cuda_v100_context_smoke.c  cuda_v100_descriptor_bound_attention_smoke.c  cuda_v100_descriptor_bound_ffn_smoke.c  cuda_v100_full_scheduler_smoke.c  cuda_v100_integrated_layer_smoke.c  cuda_v100_mxfp4_moe_smoke.c  cuda_v100_output_head_parity_smoke.c  cuda_v100_prefill_kv_smoke.c  cuda_v100_projection_attention_smoke.c  cuda_v100_scheduler_checkpoint_parity_smoke.c  cuda_v100_scheduler_snapshot_smoke.c  cuda_v100_selected_token_smoke.c  cuda_v100_stage_layer_span_smoke.c  cuda_v100_stage_scheduler_smoke.c  cuda_v100_stage_wavefront_smoke.c  cuda_v100_tc_grid_int8_smoke.cu  cuda_v100_tp_routed_ffn_smoke.c  cuda_v100_turbomind_adapter_smoke.cu  cuda_v100_turbomind_sidecar_smoke.cu  cuda_v100_two_stage_scheduler_smoke.c  gpu_arena_smoke.c  pack_index_smoke.c  residency_smoke_synthetic.sh  source_dtypes_smoke.c  v100_context_smoke.c  v100_layer_binding_smoke.c  v100_layer_state_smoke.c  v100_tp_ep_soak_prompts.jsonl
tools/: appliance-pack.cu  ds4-source-oracle-vector.c  ds4-v100-256k-32slot-gate.sh  ds4-v100-256k-finite-gate.sh  ds4-v100-256k-warmed-production-gate.sh  ds4-v100-aggregate-throughput.sh  ds4-v100-appliance-pack.cu  ds4-v100-appliance-smoke.sh  ds4-v100-appliance-soak.sh  ds4-v100-context-smoke.c  ds4-v100-gate.sh  ds4-v100-http-readiness-check.py  ds4-v100-http-response-parity.py  ds4-v100-http-response-tolerance.py  ds4-v100-layer-descriptor-gate.c  ds4-v100-localpool-build-pod.sh  ds4-v100-mtp-acceptance-matrix.sh  ds4-v100-mtp-attn-smoke.c  ds4-v100-mtp-ffn-smoke.c  ds4-v100-mtp-forward-common.c  ds4-v100-mtp-forward-common.h  ds4-v100-mtp-forward-smoke.c  ds4-v100-mtp-logits-smoke.c  ds4-v100-mtp-prefix-smoke.c  ds4-v100-mtp-q4k-smoke.c  ds4-v100-mtp-residency-smoke.c  ds4-v100-mtp-serving-smoke.sh  ds4-v100-mtp-spec-gate.sh  ds4-v100-mtp-verify-smoke.c  ds4-v100-nvlink-snapshot.sh  ds4-v100-pack.c  ds4-v100-plan-tp.c  ds4-v100-plan.c  ds4-v100-practical-serving-matrix.sh  ds4-v100-production-deployment-gate.sh  ds4-v100-replay-nvprof-wrapper.sh  ds4-v100-replay.c  ds4-v100-residency-smoke.c  ds4-v100-routed-ffn-tile-workbench.cu  ds4-v100-run-appliance.sh  (+56 more)
(+16322 files in other folders)
